--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
   position: relative;
- 
 }
 
 #body2 {
@@ -37,7 +36,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: white;
+  color: #ddc8c8;
   width: 80%;
   margin: auto;
   padding: 1.2rem 0rem;
@@ -175,6 +174,7 @@ main {
   padding-right: 1rem;
   position: relative;
 }
+
 .hero-img {
   position: relative;
   flex: 1;
@@ -202,11 +202,13 @@ main {
   font-family: "Abril Fatface";
   font-size: 5rem;
 }
+
 .hero-desc p {
   padding: 3rem 0rem;
   font-size: 1.5rem;
   color: rgb(223, 223, 223);
 }
+
 .Discover {
   padding: 1rem 2rem;
   background: none;
@@ -246,7 +248,6 @@ main {
 
 .nav-links h3 {
   padding: 3rem 0rem;
-  
 }
 
 li a {
@@ -261,15 +262,13 @@ li a {
   font-size: 3rem;
   padding: 2rem 0rem;
   margin-left: 24rem;
-  
 }
-
 
 .reveal-img,
 .reveal-text {
   position: absolute;
   width: 100%;
-  height: 150%;
+  height: 170%;
   background: #52524b;
   left: 0;
   top: -15%;
@@ -415,20 +414,19 @@ body.hide {
 /* Contact Section*/
 .contact {
   position: relative;
-  min-height: 60vh;
   display: flex;
   flex-wrap: wrap;
-  max-width: 150rem;
+  max-height: 120vh;
   text-align: center;
   z-index: 1;
 }
 .form-wrapper {
-  flex: 3 1 40rem;
+  flex: 4 1 40rem;
 }
 .form-wrapper h2 {
   font-family: "abril fatface";
   font-size: 4.2rem;
-  margin: 8rem 0rem;
+  margin: 6rem 0rem;
 }
 .form-wrapper {
   font-size: 2.6rem;
@@ -475,8 +473,8 @@ body.hide {
   flex-direction: column;
   background: #615a5a;
   color: white;
-  padding-bottom: 0.6rem;
-  padding-top: 0.6rem;
+  padding-bottom: 0.8rem;
+  padding-top: 1.1rem;
 }
 
 .footer .sci {
@@ -492,13 +490,14 @@ body.hide {
 
 .footer .sci li a {
   list-style: none;
+  justify-content: space-between;
   margin: 1rem 2rem;
   padding-bottom: 1rem;
 }
 
 .footer .sci li a img {
   filter: invert(1);
-  max-width: 2rem;
+  max-width: 1.7rem;
 }
 
 @media screen and (max-width: 1500px) {
@@ -572,7 +571,6 @@ body.hide {
   .contact h2 {
     font-size: 3rem;
     text-align: center;
-    
   }
   .contact p {
     font-size: 1.2rem;
@@ -581,13 +579,12 @@ body.hide {
   }
 }
 
-
-  @media only screen and (max-width: 799px) and (min-width: 375px) {
-.banner .content h2 {
-  font-size: 2.5rem;
-}
-
-.contact h2 {
-  display: none;
-}
+@media only screen and (max-width: 799px) and (min-width: 375px) {
+  .banner .content h2 {
+    font-size: 2.5rem;
   }
+
+  .contact h2 {
+    display: none;
+  }
+}
